data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3163.wast
;; 2. **Test Description**: Perform a function call where the callee includes a conditional branch (`br_if`) instruction to a label outside its immediate block, ensuring the branch target is correct.    - **Constraint**: Ensures that conditional branches within called functions handle labels accurately.

(assert_invalid
  (module
    (func $callee (param i32)
      (block $outer
        (block $inner
          (br_if $outer (i32.const 1))
        )
      )
    )
    (func (call $callee (i32.const 0)))
  )
  "type mismatch"
)